tests/baselines/reference/parserClassDeclaration22.errors.txt
==== tests/cases/compiler/parserClassDeclaration22.ts (1 errors) ====
    class C {
        "foo"();
        "bar"() { }
        ~~~~~
!!! parserClassDeclaration22.ts(3,5): error TS2239: Function overload name must be 'foo'.
    }